<resources>
    <string name="app_name">Zcall Mobile</string>
    <string name="action_settings">Configurações</string>
    <string name="action_usuario">Usuário</string>
    <string name="title_activity_usuario">Usuário</string>
    <string name="title_activity_ponto">Ponto</string>
    <string name="title_activity_erro_internet">ErroInternet</string>
    <string name="title_activity_entregas_sms">EntregasSMS</string>
    <string name="title_activity_principal2">Principal2</string>
    <string name="title_activity_confirmar_telefone">Confirmação do Celular</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="ligar_para_central">Ligar Para Central</string>
    <string name="ver_rota">Ver rota</string>
    <string name="n_mero_do_pedido">Número do Pedido:</string>
    <string name="cliente_apelido">Cliente / Apelido:</string>
    <string name="telefone">Telefone:</string>
    <string name="endereco">Endereço:</string>
    <string name="ponto_de_referencia">Ponto de Referência:</string>
    <string name="produtos">Produtos:</string>
    <string name="forma_de_pagamento">Forma de Pagamento:</string>
    <string name="valor">Valor:</string>
    <string name="troco_para">Troco Para:</string>
    <string name="observaco">Observação:</string>
    <string name="brindes">Brindes:</string>
    <string name="cancelar_entrega">Cancelar Entrega</string>
    <string name="finalizar_entrega">Finalizar Entrega</string>
    <string name="title_activity_chat">Chat</string>
    <string name="digite_aqui">Digite aqui…</string>
    <string name="john_doe">John Doe</string>
    <string name="hi_man_how_are_you">hi man, how are you?</string>
    <string name="_11_40">11:40</string>
    <string name="sem_entregas_no_momento">AGUARDANDO\nNOVA ENTREGA</string>
    <string name="_0">0</string>
    <string name="insira_o_c_digo_que_voc_recebeu">Insira o código que você recebeu</string>
    <string name="confirmar">Confirmar</string>
    <string name="enviar_de_nnovo">Enviar de \nNovo</string>
    <string name="copy">©</string>
    <string name="c_d_licen_a">* Código de Licença</string>
    <string name="celular_99_99999_9999">* Celular (99)99999–9999</string>
    <string name="enviando">Enviando…</string>
    <string name="preparando_o_envio_do_c_digo">Preparando o envio do código</string>
    <string name="enviar_c_digo">Enviar Código</string>

    <string name="_notification_title_template">%1$s</string>
    <string name="_notification_placeholder_text_template">Conexão perdida!</string>

    <string name="action_share">Share</string>
    <string name="action_reply">Reply</string>
    <string name="atencao_sem_internet">Parece que você está sem internet!</string>
    <string name="reconectando">Reconectando ao servidor…</string>
    <string name="cliente">Cliente:</string>
    <string name="toque_em_sair_do_ponto_para_finalizar">Toque em sair do ponto para finalizar.</string>
    <string name="sair_do_ponto">Sair do Ponto</string>
    <string name="excluir">Excluir</string>
    <string name="bg">TODO</string>
    <string name="reconectando_servidor">Reconectando ao servidor…</string>
    <string name="msg_sem_internet">Parece que você está sem internet!</string>
    <string name="ver_entrega">LISTAR ENTREGAS</string>
    <string name="novas_entregas">Nova Notificação</string>
    <string name="dados_da_entrega">Dados da Entrega</string>
    <string name="iniciar_ponto">Iniciar Ponto</string>
    <string name="toque_em_iniciar_ponto_para_utiliza_o_app">Toque em iniciar ponto para utiliza o App</string>
    <string name="entregadores">Entregadores</string>
    <string name="zcall_mobile">Zcall Mobile</string>
    <string name="mobile">Mobile</string>
    <string name="system_battery_status_ok">Status Ok</string>
    <string name="system_battery_status_low">Status Low</string>
    <string name="voltar">Voltar</string>
    <string name="bateria">Bateria</string>
    <string name="gps">Gps</string>
    <string name="buscar_entregas">Buscar entregas</string>
    <string name="atencao_as_notificaoes">Atenção: As notificações do app na barra de notficações do Android não trazem os dados da entrega</string>
    <string name="title_activity_vendas_sistematica">VendasSistematica</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="zenitech">© Zenitech</string>
    <string name="informe_sua_senha_de_seguranca">Informe sua senha de segurança</string>
    <string name="ligar_para_o_cliente">Ligar para o cliente</string>
    <string name="celular">Celular</string>
    <string name="title_activity_reset_app">Reset App</string>
    <string name="mensagem_reset">Insira o código que você recebeu</string>
    <string name="complemento">Complemento</string>
    <string name="rota_de_entrega">Rota de Entrega</string>
</resources>
