<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_ponto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="br.com.zenitech.siaclocalizacaocliente.Ponto"
    tools:showIn="@layout/activity_ponto">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:alpha="0.6"
        android:contentDescription="@string/app_name"
        android:scaleType="centerCrop"
        android:src="@drawable/bgtopo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/toque_em_iniciar_ponto_para_utiliza_o_app"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btnIniciarPonto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/botao_customizado"
            android:paddingLeft="50dp"
            android:paddingRight="50dp"
            android:text="@string/iniciar_ponto"
            android:textColor="@android:color/white" />

    </LinearLayout>
</RelativeLayout>
