<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="br.com.zenitech.zcallmobile.Configuracao">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!--<ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:alpha="0.6"
            android:contentDescription="@string/bg"
            android:scaleType="centerCrop"
            android:src="@drawable/bgtopo" />-->

        <LinearLayout
            android:id="@+id/activity_configuracao"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="40dp"
            tools:context="br.com.zenitech.zcallmobile.Configuracao">

            <LinearLayout
                android:id="@+id/llEnv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:text="@string/preparando_o_envio_do_c_digo"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/txtNC"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/celular_99_99999_9999"
                    android:textSize="20sp" />

                <me.zhanghai.android.materialprogressbar.MaterialProgressBar
                    style="@style/Widget.MaterialProgressBar.ProgressBar.Horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="3.6dp"
                    android:indeterminate="true"
                    app:mpb_progressStyle="horizontal" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:text="@string/enviando"
                    android:textColor="@color/colorAccent" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/llNB"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/etIdEmpresa"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints=""
                        android:hint="@string/c_d_licen_a"
                        android:imeOptions="actionNext"
                        android:inputType="phone"
                        tools:targetApi="o" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp">

                    <EditText
                        android:id="@+id/etNumero"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints=""
                        android:hint="@string/celular_99_99999_9999"
                        android:imeOptions="actionSend"
                        android:inputType="phone"
                        tools:targetApi="o" />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/btnSalvarConfiguracoes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/botao_customizado"
                    android:focusable="true"
                    android:text="@string/enviar_c_digo"
                    android:textColor="@android:color/white" />

            </LinearLayout>
        </LinearLayout>

    </RelativeLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
