<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f5f5f5"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="br.com.zenitech.zcallmobile.ConfirmarTelefone">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/logo"
        android:visibility="visible" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/cod"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text=""
            android:textSize="30sp"
            android:visibility="gone" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/insira_o_c_digo_que_voc_recebeu"
            android:textSize="30sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/codA"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:autofillHints=""
                android:gravity="center"
                android:hint="@string/_0"
                android:imeOptions="actionNext"
                android:inputType="phone"
                android:maxLength="1"
                android:maxLines="1"
                tools:targetApi="o" />

            <EditText
                android:id="@+id/codB"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:autofillHints=""
                android:gravity="center"
                android:hint="@string/_0"
                android:imeOptions="actionNext"
                android:inputType="phone"
                android:maxLength="1"
                android:maxLines="1"
                tools:targetApi="o" />

            <EditText
                android:id="@+id/codC"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:autofillHints=""
                android:gravity="center"
                android:hint="@string/_0"
                android:imeOptions="actionNext"
                android:inputType="phone"
                android:maxLength="1"
                android:maxLines="1"
                tools:targetApi="o" />

            <EditText
                android:id="@+id/codD"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:autofillHints=""
                android:gravity="center"
                android:hint="@string/_0"
                android:imeOptions="actionNext"
                android:inputType="phone"
                android:maxLength="1"
                android:maxLines="1"
                tools:targetApi="o" />

            <EditText
                android:id="@+id/codE"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:autofillHints=""
                android:gravity="center"
                android:hint="@string/_0"
                android:imeOptions="actionNext"
                android:inputType="phone"
                android:maxLength="1"
                android:maxLines="1"
                tools:targetApi="o" />

            <EditText
                android:id="@+id/codF"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:autofillHints=""
                android:gravity="center"
                android:hint="@string/_0"
                android:imeOptions="actionSend"
                android:inputType="phone"
                android:maxLength="1"
                android:maxLines="1"
                tools:targetApi="o" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp">

            <Button
                android:id="@+id/btnConfirmarCodigo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:background="@drawable/botao_customizado_p"
                android:focusable="true"
                android:text="@string/confirmar"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btnReenviarCodigo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_weight="1"
                android:background="#00ffffff"
                android:focusable="true"
                android:gravity="start"
                android:text="@string/enviar_de_nnovo"
                android:textColor="@color/colorAccent"
                android:textSize="16sp"
                tools:ignore="ButtonStyle" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/copy" />

        <TextView
            android:id="@+id/copyright"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name" />

    </LinearLayout>
</LinearLayout>
